--- a/home page/home.css
+++ b/home page/home.css
@@ -24,7 +24,7 @@ h1 {
 
 h2 {
     font-family: 'Press Start 2P', cursive;
-    color: #ffff00;
+    color: red;
     font-size: 30px;
     margin: 10px 0;
 }
@@ -60,7 +60,7 @@ a:hover {
 /* Small Header Styling */
 h6 {
     font-family: 'Press Start 2P', cursive;
-    color: #ffcc00;
+    color: red;
     font-size: 30px;
     margin: 10px 0;
 }
